fix: correct css rendering answer gap and one of the colors incorrectly

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -46,7 +46,6 @@ h2 {
 }
 
 .question {
-    background-color: #EF4B4C;
     min-height: 100px;
 }
 
